--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.4.16",
     "postcss": "8.4.28",
     "react": "18.2.0",
+    "react-currency-input-field": "^3.6.11",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
